css scroll & overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
-  text-align: center;
-}
+/* :root {
+  overflow: hidden;
+} */
 
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -10,10 +10,9 @@
 
 .App {
   display: flex;
-  /* flex-direction: column; */
+  text-align: center;
   justify-content: center;
   align-items: center;
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
 }
 
@@ -25,7 +24,9 @@
 .App.mobile {
   min-width: 100vw;
   height: 100%;
+  max-height: 100vh;
   background-color: #fefefe;
+  overflow: hidden;
 }
 
 .app-container {
@@ -64,6 +65,8 @@
 #svg-graph-container.mobile {
   width: 100%;
   height: 85%;
+  padding-top: 3%;
+  padding-bottom: 3%;
   border-bottom: #5bb9b8 1vw solid;
 }
 
