--- a/src/Selection.css
+++ b/src/Selection.css
@@ -57,7 +57,8 @@
 
 .card-content.mobile {
   width: 100%;
-  margin: 10%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .card-content h6 {
